--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Juan Garnica</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
-  <title>Juan Garnica</title>
-</head>
-
-<body>
-  <div class="main-wrapper">
-    <section>
-      <div class="container">
-        <h1>
-          Making and breaking things
-        </h1>
-        <p>
-          Hi, I am
-          <strong>Juan Garnica</strong>, coder for a living. I strongly beleave that I am defined for what I do, so let's talk about
-          it: Frontend Developer. UX Designer. Node.js Hacker. Minimalism lover. Maker. Fpv drone pilot. Geek. Crazy tecky. TIC
-          entrepreneur. Teacher. JS fan and hater.
-        </p>
-        <h3>
-          <a href="mailto:jupegarnica@gmail.com">Let's talk</a>
-        </h3>
-    
-      </div>
-    </section>
-    <footer>
-      <div class="container">
-        <a href="https://www.linkedin.com/in/jupegarnica/">Linkedin</a>
-        <a href="https://www.instagram.com/jupegarnica/">Instagram</a>
-        <a href="https://github.com/jupegarnica">Github</a>
-        <a href="mailto:jupegarnica@gmail.com">Email</a>
-    
-      </div>
-    </footer>
-  </div>
-</body>
-
+  <body>
+    <div class="main-wrapper">
+      <section>
+        <div class="container">
+          <h1>
+            Making and breaking things
+          </h1>
+          <p>
+            Hi, I am <strong>Juan Garnica</strong>, coder for a living. I strongly believe that I am defined for what I do, so let's talk about it: Frontend Developer. UX Designer. Node.js Hacker.
+            Minimalism lover. Maker. Fpv drone pilot. Geek. Crazy tecky. TIC entrepreneur. Teacher. JS fan and hater.
+          </p>
+          <h3>
+            <a href="mailto:jupegarnica@gmail.com">Let's talk</a>
+          </h3>
+        </div>
+      </section>
+      <footer>
+        <div class="container">
+          <a href="https://www.linkedin.com/in/jupegarnica/">Linkedin</a>
+          <a href="https://www.instagram.com/jupegarnica/">Instagram</a>
+          <a href="https://github.com/jupegarnica">Github</a>
+          <a href="mailto:jupegarnica@gmail.com">Email</a>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
